--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="pure-u">
     <div>
       <h1>BTC Skeletons</h1>
-      <h4>Angular</h4>
+      <h4><a href="/btc/angular">Angular</a></h4>
       <h4>Chaplin</h4>
       <h4>Cordova</h4>
       <h4>Ember</h4>
@@ -46,7 +46,7 @@
       </li>
     </ol>
     <h1 id="about">About</h1>
-    <p>These are set of starter projects to build rich client-side experiences using <a href="http://nodejs.org/">Node.js</a>. These skeletons are aimed at leveraging packages to develop and build, while providing a set of unified tasks and definitions to focus less on configuration and setup.</p>
+    <p>These are set of starter projects to build rich client-side experiences using <a target="_blank" href="http://nodejs.org/">Node.js</a>. These skeletons are aimed at leveraging packages to develop and build, while providing a set of unified tasks and definitions to focus less on configuration and setup.</p>
     <h2 id="about-core">Core</h2>
     <p>The following tools are leveraged to provide a unified workflow:</p>
     <ul>
