--- a/angular/index.html
+++ b/angular/index.html
@@ -30,6 +30,7 @@
       <a href="https://github.com/jupl/btc-angular/archive/server.zip" class="pure-button">Serverpack</a>
     </div>
 
+    <h1>Table of Contents</h1>
     <ol id="toc">
       <li><a href="#about">About</a></li>
       <li><a href="#getting-started">Getting Started</a></li>
