--- a/angular/index.html
+++ b/angular/index.html
@@ -14,10 +14,10 @@
     <div>
       <h1>BTC Angular</h1>
       <iframe src="http://ghbtns.com/github-btn.html?user=jupl&repo=btc-angular&type=watch&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="77" height="20"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
       <h4><a href="/btc">Core</a></h4>
       <h4>Chaplin</h4>
-      <h4>Cordova</h4>
+      <h4><a href="/btc/cordova">Cordova</a></h4>
       <h4>Ember</h4>
     </div>
   </header>
@@ -32,8 +32,13 @@
 
     <h1>Table of Contents</h1>
     <ol id="toc">
-      <li><a href="#about">About</a></li>
-      <li><a href="#getting-started">Getting Started</a></li>
+      <li>
+        <a href="#about">About</a>
+        <ol type="a">
+          <li><a href="#about-core">Core</a></li>
+          <li><a href="#about-angular">Angular</a></li>
+        </ol>
+      </li>
       <li><a href="#tasks">Tasks</a></li>
     </ol>
 
@@ -41,7 +46,7 @@
     <p>This is a starter project template to build rich client-side experiences with <a target="_blank" href="http://angularjs.org/">AngularJS</a> using <a target="_blank" href="http://nodejs.org/">Node.js</a>. This skeleton is aimed at leveraging packages to develop and build, while providing a set of unified tasks and definitions to focus less on configuration and setup.</p>
 
     <h2 id="about-core">Core</h2>
-    <p>This starter project builds on top of core packages and utilities. In addition, there are variants of this project that leverage other tools, such as Cordova or server extras. Visit <a href="/btc">this page</a> for more information on core functionality. Visit <a href="">this page</a> for more information on Cordova specifics.</p>
+    <p>This starter project builds on top of core packages and utilities. In addition, there are variants of this project that leverage other tools, such as Cordova or server extras. Visit <a href="/btc">this page</a> for more information on core functionality. Visit <a href="/btc/cordova">this page</a> for more information on Cordova specifics.</p>
 
     <h2 id="about-angular">Angular</h2>
     <p>The following additional packages are included:</p>
@@ -56,7 +61,8 @@
     </ul>
 
     <h1 id="tasks">Tasks</h1>
-    <p>Additional tasks are included for working with AngularJS. Click here for more information on tasks.</p>
+    <p>Additional tasks are included for working with AngularJS. Visit <a href="/btc#tasks">this page</a> for more information on tasks.</p>
+
     <h2 id="tasks-generators">Generators</h2>
     <p>These generators are provided to generate components without writing boilerplate code.</p>
     <h3>
