--- a/cordova/index.html
+++ b/cordova/index.html
@@ -18,7 +18,7 @@
       <h4><a href="/btc">Core</a></h4>
       <h4><a href="/btc/angular">Angular</a></h4>
       <h4>Chaplin</h4>
-      <h4>Ember</h4>
+      <h4><a href="/btc/ember">Ember</a></h4>
     </div>
   </header>
 
