--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h4><a href="/btc/angular">Angular</a></h4>
       <h4>Chaplin</h4>
       <h4><a href="/btc/cordova">Cordova</a></h4>
-      <h4>Ember</h4>
+      <h4><a href="/btc/ember">Ember</a></h4>
     </div>
   </header>
 
@@ -117,15 +117,15 @@
     <h2 id="tasks-extras">Extras</h2>
     <p>These commands add additional features/items to the project that are not included by default.</p>
     <h3>
-      <div><code>add jquery</code></div>
-      <div><code>rem jquery</code></div>
+      <div><code>add:jquery</code></div>
+      <div><code>rem:jquery</code></div>
     </h3>
     <p>Add/remove the ubiquitous library <a target="_blank" href="http://jquery.com/">jQuery</a> to/from the project.</p>
     <h3>
-      <div><code>add normalize</code></div>
-      <div><code>rem normalize</code></div>
+      <div><code>add:normalize</code></div>
+      <div><code>rem:normalize</code></div>
     </h3>
-    <p>Add/remove <a target="_blank" href="http://necolas.github.io/normalize.css/">normalize.css</a> to ensure a consistent starting point in styling between different browsers.</p>
+    <p>Add/remove <a target="_blank" href="http://necolas.github.io/normalize.css/">normalize.css</a> to/from the project to ensure a consistent starting point in styling between different browsers.</p>
 
     <h2 id="tasks-generators">Generators</h2>
     <p>Generator commands are available to generate and tear down files from templates given a type and name, eliminating the writing of boilerplate code.</p>
