--- a/ember/index.html
+++ b/ember/index.html
@@ -17,7 +17,7 @@
   allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
       <h4><a href="/btc">Core</a></h4>
       <h4><a href="/btc/angular">Angular</a></h4>
-      <h4>Chaplin</h4>
+      <h4><a href="/btc/chaplin">Chaplin</a></h4>
       <h4><a href="/btc/cordova">Cordova</a></h4>
     </div>
   </header>
@@ -113,7 +113,7 @@
       <div><code>generate route=[name]</code></div>
       <div><code>destroy route=[name]</code></div>
     </h3>
-    <p>Generate/destroy an <a target="_blank" href="hhttp://emberjs.com/guides/routing/defining-your-routes/">Ember route</a>.</p>
+    <p>Generate/destroy an <a target="_blank" href="http://emberjs.com/guides/routing/defining-your-routes/">Ember route</a>.</p>
     <h3>
       <div><code>generate controller=[name]</code></div>
       <div><code>destroy controller=[name]</code></div>
