--- a/angular/index.html
+++ b/angular/index.html
@@ -16,7 +16,7 @@
       <iframe src="http://ghbtns.com/github-btn.html?user=jupl&repo=btc-angular&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
       <h4><a href="/btc">Core</a></h4>
-      <h4>Chaplin</h4>
+      <h4><a href="/btc/chaplin">Chaplin</a></h4>
       <h4><a href="/btc/cordova">Cordova</a></h4>
       <h4><a href="/btc/ember">Ember</a></h4>
     </div>
