--- a/cordova/index.html
+++ b/cordova/index.html
@@ -17,7 +17,7 @@
   allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
       <h4><a href="/btc">Core</a></h4>
       <h4><a href="/btc/angular">Angular</a></h4>
-      <h4>Chaplin</h4>
+      <h4><a href="/btc/chaplin">Chaplin</a></h4>
       <h4><a href="/btc/ember">Ember</a></h4>
     </div>
   </header>
