--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
       <h1>BTC Skeletons</h1>
       <h4><a href="/btc/angular">Angular</a></h4>
-      <h4>Chaplin</h4>
+      <h4><a href="/btc/chaplin">Chaplin</a></h4>
       <h4><a href="/btc/cordova">Cordova</a></h4>
       <h4><a href="/btc/ember">Ember</a></h4>
     </div>
@@ -83,9 +83,9 @@
     <h2 id="about-frameworks">Frameworks</h2>
     <p>The following starter projects are available to download, including Cordova and Serverpack variants. The JavaScript frameworks available include:</p>
     <ul>
-      <li><a href=""><b>AngularJS</b></a> (<a target="_blank" href="http://angularjs.org/">HTML enhanced for web apps</a>)</li>
-      <li><a href=""><b>Chaplin</b></a> (<a target="_blank" href="http://chaplinjs.org/">HTML5 application architecture</a>)</li>
-      <li><a href=""><b>Ember.js</b></a> (<a target="_blank" href="http://emberjs.com/">A framework for creating ambitious web applications</a>)</li>
+      <li><a href="/btc/angular"><b>AngularJS</b></a> (<a target="_blank" href="http://angularjs.org/">HTML enhanced for web apps</a>)</li>
+      <li><a href="/btc/chaplin"><b>Chaplin</b></a> (<a target="_blank" href="http://chaplinjs.org/">HTML5 application architecture</a>)</li>
+      <li><a href="/btc/ember"><b>Ember.js</b></a> (<a target="_blank" href="http://emberjs.com/">A framework for creating ambitious web applications</a>)</li>
     </ul>
     <h1 id="getting-started">Getting Started</h1>
     <ol>
