--- a/cordova/index.html
+++ b/cordova/index.html
@@ -102,5 +102,13 @@
     <h3><code>emulate:[mode] device=[device]</code></h3>
     <p>Assemble code and assets, build a native application with Cordova, and deploy to an emulator for the specified device. <b>NOTE:</b> <a target="_blank" href="https://github.com/phonegap/ios-sim">ios-sim</a> is required to start the iOS simulator on OS X.</p>
   </section>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-48748979-1', 'jupl.github.io');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
