--- a/index.html
+++ b/index.html
@@ -187,5 +187,13 @@
     <h3><code>test:site reporter=[reporter] watch=false</code></h3>
     <p>Run site-based tests (ex: system tests) using PhantomJS and WebDriverJS. A server is started up temporarily to interact with the site. A mocha reporter can be specified with the reporter option. By default Karma runs once. If you run this task with <code>watch=true</code> Mocha will auto-run on changes with Nodemon. The global method <code>getDriver</code> is provided to setup a driver, while the global property <code>baseUrl</code> returns the root url. (ex: <code>http://localhost:3333</code>) Mocha as Promised is also included to take advantage of WebDriverJS' use of promises.</p>
   </section>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-48748979-1', 'jupl.github.io');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
